--- a/package.json
+++ b/package.json
@@ -4,25 +4,17 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/brandonburns/expressREST.git"
+    "test": "mocha"
   },
   "author": "Brandon Burns",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/brandonburns/expressREST/issues"
-  },
-  "homepage": "https://github.com/brandonburns/expressREST",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.0",
     "eat": "^0.1.1",
     "express": "^4.11.2",
     "mongoose": "^3.8.23",
+    "ms": "^0.7.0",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2"
   },
